--- a/developer.html
+++ b/developer.html
@@ -122,7 +122,7 @@
           
           <!-- Kolom Gambar -->
           <div class="col-md-6 text-center">
-            <img src="D:\Documents\dokumen pribadi\File Telkom\file seleksi mbc lab\LandingPageMBC2.0\images\FotoLinkedin2.jpeg" alt="Gambar Developer" class="img-fluid" style="max-height: 400px; width: auto;">
+            <img src="\images\FotoLinkedin2.jpeg" alt="Gambar Developer" class="img-fluid" style="max-height: 400px; width: auto;">
           </div>
         </div>
       </div>
